Publish generated site

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <!-- Description -->
                 <div class="ws-about-content clearfix">
                     <div class="col-sm-8 col-sm-offset-2">
-                        <h3>Made with love</h3> 
+                        <h3>Olga Suslova</h3> 
                         <div class="ws-separator"></div>                      
                         <p>What I try to express through my painting is a sense of harmony in the nature, the magic that is hidden even in the smallest things. I agree with Andrew Wyeth when he says: <cite>“One's art goes as far and as deep as one's love goes”</cite>.</p>
                     </div>                
