Publish generated site

--- a/gallery-forest.html
+++ b/gallery-forest.html
@@ -315,7 +315,8 @@
                     <h3>About Me</h3>
                     <div class="ws-footer-separator"></div>                                         
                     <div class="ws-footer-about">
-                        <p>I am an artist based in Tel Aviv, Israel. I received my education at Arts Academy of St. Petersburg, Russia. In the beginning of my career I worked as a stage designer but now I dedicate all my time to painting. I enjoy my working time, it's the best time for me.</p>
+                        <p>I am an artist based in Tel Aviv, Israel. I received my education at Arts Academy of St. Petersburg, Russia. In the beginning of my career I worked as a stage designer but now I dedicate all my time to painting. I enjoy my working time, it's the best time for me. What I try to express through my painting is a sense of harmony in the nature, the magic that is hidden even in the smallest things. I agree with Andrew Wyeth when he says: "One's art goes as far and as deep as one's love goes".
+</p>
                     </div>
                 </div>
 
