--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="col-sm-8 col-sm-offset-2">
                         <h3>Olga Suslova</h3> 
                         <div class="ws-separator"></div>                      
-                        <p>Marine life and а wild life artist, a member of the Ocean Artists Society.</p>
+                        <p>Marine life and wild life artist, a member of the Ocean Artists Society.</p>
                     </div>                
                 </div>
 
