Publish generated site

--- a/gallery-watercolor.html
+++ b/gallery-watercolor.html
@@ -581,6 +581,29 @@
                                 </div>
                             </a>
                         </div>
+<div class="col-sm-6 col-md-4 ws-works-item">
+                            <a href="#">                        
+                                <div class="ws-item-offer">
+                                    <!-- Image -->                        
+                                    <figure>                            
+                                        <img src="assets/images/galleries/watercolor/21-polar-sea.jpg" alt="Polar Sea" class="img-responsive">
+                                    </figure>                    
+                                </div>
+
+                                <div class="ws-works-caption text-center">
+                                    <!-- Item Category -->
+                                    <div class="ws-item-category">watercolor on paper</div>
+
+                                    <!-- Title -->
+                                    <h3 class="ws-item-title">Polar Sea</h3>                        
+
+                                    <div class="ws-item-separator"></div>    
+
+                                    <!-- Price -->
+                                    <div class="ws-item-price">watercolor on paper</div>                                                    
+                                </div>
+                            </a>
+                        </div>
 
                         <!-- Item -->
                         
