--- a/index.html
+++ b/index.html
@@ -226,6 +226,18 @@
                         </a>
                     </div>
 <div class="col-sm-4 featured-collections-item">
+                        <a href="gallery-desert.html">
+                            <div class="thumbnail">
+                                <img src="assets/images/desert.jpg" alt="Desert">
+                                <div class="ws-overlay">
+                                    <div class="caption">
+                                        <h3>Desert</h3> 
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+<div class="col-sm-4 featured-collections-item">
                         <a href="gallery-fossils.html">
                             <div class="thumbnail">
                                 <img src="assets/images/fossils.jpg" alt="Fossils">
@@ -256,18 +268,6 @@
                                 <div class="ws-overlay">
                                     <div class="caption">
                                         <h3>Close Up</h3> 
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-<div class="col-sm-4 featured-collections-item">
-                        <a href="gallery-landscape.html">
-                            <div class="thumbnail">
-                                <img src="assets/images/landscape.jpg" alt="Landscape">
-                                <div class="ws-overlay">
-                                    <div class="caption">
-                                        <h3>Landscape</h3> 
                                     </div>
                                 </div>
                             </div>
