Publish generated site

--- a/gallery-forest.html
+++ b/gallery-forest.html
@@ -97,7 +97,7 @@
     <!-- End Header -->
 
     <!-- Page Parallax Header -->
-    <div class="ws-parallax-header parallax-window" data-parallax="scroll" data-image-src="assets/img/backgrounds/shop-header-bg.jpg">        
+    <div class="ws-parallax-header parallax-window" data-parallax="scroll" data-image-src="assets/images/forest-header.jpg">        
         <div class="ws-overlay">            
             <div class="ws-parallax-caption">                
                 <div class="ws-parallax-holder">
@@ -233,6 +233,29 @@
 
                                     <!-- Price -->
                                     <div class="ws-item-price">oil on canvas 60x60 cm</div>                                                    
+                                </div>
+                            </a>
+                        </div>
+<div class="col-sm-6 col-md-4 ws-works-item">
+                            <a href="#">                        
+                                <div class="ws-item-offer">
+                                    <!-- Image -->                        
+                                    <figure>                            
+                                        <img src="assets/images/galleries/forest/06-lizard-mona.jpg" alt="Lizard Mona" class="img-responsive">
+                                    </figure>                    
+                                </div>
+
+                                <div class="ws-works-caption text-center">
+                                    <!-- Item Category -->
+                                    <div class="ws-item-category">oil on canvas 80x60 cm</div>
+
+                                    <!-- Title -->
+                                    <h3 class="ws-item-title">Lizard Mona</h3>                        
+
+                                    <div class="ws-item-separator"></div>    
+
+                                    <!-- Price -->
+                                    <div class="ws-item-price">oil on canvas 80x60 cm</div>                                                    
                                 </div>
                             </a>
                         </div>
