Publish generated site

--- a/gallery-forest.html
+++ b/gallery-forest.html
@@ -87,7 +87,7 @@
 
                     <ul class="nav navbar-nav navbar-right">                            
                            
-                        <li><a href="https://www.etsy.com">Buy Prints</a></li>        
+                        <li><a href="https://society6.com/olgasoo">Buy Prints</a></li>        
                         <li><a href="contact.html" onclick="return false;">Contact</a></li>                      
                     </ul>            
                 </div>
@@ -363,8 +363,8 @@
                     <h3>Shop</h3>         
                     <div class="ws-footer-separator"></div>                                                     
                     <ul>
-                        <li><a href="https://www.etsy.com">Prints</a></li>
-                        <li><a href="contact.html" onclick="return false;">Originals</a></li>
+                        <li><a href="https://society6.com/olgasoo">Prints</a></li>
+                        <li><a href="mailto:olgasoo@gmail.com" onclick="return false;">Originals</a></li>
                         <li>
                         <li>                        
                     </ul>  
