Publish generated site

--- a/gallery-baroque.html
+++ b/gallery-baroque.html
@@ -113,7 +113,7 @@
 
                         <!-- Item -->
                         <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/01-queen-of-the-reef.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -136,7 +136,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/02-triptych-baroque---red-corals-for-the-queen.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -159,7 +159,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/03-triptych-baroque---guards.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -182,7 +182,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/04-triptych-baroque---king-and-his-treasures.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -205,7 +205,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/05-triptych-baroque.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -228,7 +228,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/06-morning-on-the-coral-reef.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -251,7 +251,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/07-coral-reef.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -274,7 +274,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/08-coral-reef.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -297,7 +297,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/09-caw-fish.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -320,7 +320,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/10-sunset-in-the-coral-garden.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -343,7 +343,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/11-coral-reef-baroque.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -366,7 +366,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/baroque/12-blue-ringed-octopus.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
