--- a/gallery-desert.html
+++ b/gallery-desert.html
@@ -113,7 +113,7 @@
 
                         <!-- Item -->
                         <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/01-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -136,7 +136,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/02-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -159,7 +159,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/03-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -182,7 +182,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/04-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -205,7 +205,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/05-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -228,7 +228,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/06-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -251,7 +251,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/07-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -274,7 +274,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/08-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -297,7 +297,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/09-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -320,7 +320,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/10-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -343,7 +343,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/11-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -366,7 +366,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/desert/12-desert-landscape.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
