--- a/gallery-forest.html
+++ b/gallery-forest.html
@@ -113,7 +113,7 @@
 
                         <!-- Item -->
                         <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/forest/01-the-last-minute.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -136,7 +136,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/forest/02-mimicry.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -159,7 +159,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/forest/03-life-in-the-grass.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -182,7 +182,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/forest/04-going-green.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -205,7 +205,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/forest/05-enjoying-the-sunset.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -228,7 +228,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/forest/06-lizard-mona.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
