--- a/gallery-fossils.html
+++ b/gallery-fossils.html
@@ -113,7 +113,7 @@
 
                         <!-- Item -->
                         <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/01-fossils.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -136,7 +136,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/02-red-rocks.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -159,7 +159,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/03-misty-morning.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -182,7 +182,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/04-big-ammonite.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -205,7 +205,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/05-shells-and-butterflies.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -228,7 +228,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/06-sad-cuttlefish.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -251,7 +251,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/07-misty-lagoon.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -274,7 +274,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/08-atlantis,-oil-on-canvas-140x110x2.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -297,7 +297,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/09-napoleon-fish.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -320,7 +320,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/10-in-the-cave.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -343,7 +343,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/11-zeus-faber,-oil-on-canvas-60x60-cm.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -366,7 +366,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/12-still-life-with-shells.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -389,7 +389,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/13-stillife-on-white.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -412,7 +412,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/14-stillife-on-black.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -435,7 +435,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/fossils/15-sea-collection.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
