--- a/gallery-close-up.html
+++ b/gallery-close-up.html
@@ -113,7 +113,7 @@
 
                         <!-- Item -->
                         <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/01-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -136,7 +136,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/02-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -159,7 +159,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/03-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -182,7 +182,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/04-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -205,7 +205,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/05-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -228,7 +228,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/06-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -251,7 +251,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/07-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -274,7 +274,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/08-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -297,7 +297,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/09-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -320,7 +320,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/10-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -343,7 +343,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/11-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -366,7 +366,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/12-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -389,7 +389,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/13-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -412,7 +412,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/14-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
@@ -435,7 +435,7 @@
                             </a>
                         </div>
 <div class="col-sm-6 col-md-4 ws-works-item">
-                            <a href="#">                        
+                            <a href="assets/images/original-galleries/close-up/15-oil-on-canvas.jpg">                        
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
