Publish generated site

--- a/gallery-watercolor.html
+++ b/gallery-watercolor.html
@@ -232,7 +232,7 @@
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
-                                        <img src="assets/images/watercolor/06-galf-stream.jpg" alt="Galf Stream" class="img-responsive">
+                                        <img src="assets/images/watercolor/06-galf-stream.jpg" alt="Gulf Stream" class="img-responsive">
                                     </figure>                    
                                 </div>
 
@@ -241,7 +241,7 @@
                                     <div class="ws-item-category">watercolor on paper</div>
 
                                     <!-- Title -->
-                                    <h3 class="ws-item-title">Galf Stream</h3>                        
+                                    <h3 class="ws-item-title">Gulf Stream</h3>                        
 
                                     <div class="ws-item-separator"></div>    
 
@@ -508,7 +508,7 @@
                                 <div class="ws-item-offer">
                                     <!-- Image -->                        
                                     <figure>                            
-                                        <img src="assets/images/watercolor/18-galf-stream.jpg" alt="Galf Stream" class="img-responsive">
+                                        <img src="assets/images/watercolor/18-galf-stream.jpg" alt="Gulf Stream" class="img-responsive">
                                     </figure>                    
                                 </div>
 
@@ -517,7 +517,7 @@
                                     <div class="ws-item-category">watercolor on paper</div>
 
                                     <!-- Title -->
-                                    <h3 class="ws-item-title">Galf Stream</h3>                        
+                                    <h3 class="ws-item-title">Gulf Stream</h3>                        
 
                                     <div class="ws-item-separator"></div>    
 
